--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 annotated-types==0.7.0
 anyio==4.4.0
 asttokens==2.4.1
+attrs==23.2.0
 certifi==2024.6.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+dacite==1.8.1
 debugpy==1.8.2
 decorator==5.1.1
 dnspython==2.6.1
@@ -13,29 +18,45 @@ exceptiongroup==1.2.1
 executing==2.0.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
+fonttools==4.53.0
 greenlet==3.0.3
 h11==0.14.0
+htmlmin==0.1.12
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
+ImageHash==4.3.1
 ipykernel==6.29.5
 ipython==8.26.0
+ipywidgets==8.1.3
 jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.4.2
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+jupyterlab_widgets==3.0.11
+kiwisolver==1.4.5
+llvmlite==0.43.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+matplotlib==3.9.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+multimethod==1.12
 mysql-connector-python==9.0.0
 nest-asyncio==1.6.0
+networkx==3.3
+nltk==3.8.1
+numba==0.60.0
 numpy==2.0.0
 orjson==3.10.6
 packaging==24.1
 pandas==2.2.2
 parso==0.8.4
+patsy==0.5.6
+phik==0.12.4
+pillow==10.4.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 psutil==6.0.0
@@ -45,26 +66,41 @@ pydantic==2.8.0
 pydantic_core==2.20.0
 Pygments==2.18.0
 PyMySQL==1.1.1
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
+PyWavelets==1.6.0
 PyYAML==6.0.1
 pyzmq==26.0.3
+regex==2024.5.15
+requests==2.32.3
 rich==13.7.1
+scikit-learn==1.5.1
+scipy==1.13.1
+seaborn==0.13.2
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 stack-data==0.6.3
 starlette==0.37.2
+statsmodels==0.14.2
+threadpoolctl==3.5.0
 tornado==6.4.1
+tqdm==4.66.4
 traitlets==5.14.3
+typeguard==4.3.0
 typer==0.12.3
 typing_extensions==4.12.2
 tzdata==2024.1
 ujson==5.10.0
+urllib3==2.2.2
 uvicorn==0.30.1
+visions==0.7.6
 watchfiles==0.22.0
 wcwidth==0.2.13
 websockets==12.0
+widgetsnbextension==4.0.11
+wordcloud==1.9.3
